--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -27,6 +27,7 @@
 *       second release for DVS bundle
 * 2017/10/23 By Albert Li
 *	fix dvc_list_container bug
-* 2017/10/23 By ALbert Li
+* 2017/10/23 By Albert Li
 *       enhance dvc_init_server function , now support --options and restart
-
+* 2017/10/25 By Albert Li
+*	prepare for 2017_1025 release
